# xbrdf

./: .gitignore  Cargo.toml  PROJECT_PLAN.md  README.md
.cargo/: config.toml
assets/: geo.hip
assets/backup/: geo_bak1.hip  geo_bak2.hip
assets/fixtures/: box.fbx  colors.toml  flat.toml  groovenoise_rg.fbx  grooves_rg.fbx  rough_a.fbx  rough_b.fbx  specular.toml
assets/preview/: pig.fbx  pig2.fbx
crates/xbrdf-cli/: Cargo.toml
crates/xbrdf-cli/src/: main.rs
crates/xbrdf-cli/tests/: smoke_bake.rs
crates/xbrdf-core/: Cargo.toml
crates/xbrdf-core/src/: config.rs  geometry.rs  lib.rs  math.rs  reference.rs  sampling.rs
crates/xbrdf-gpu/: Cargo.toml
crates/xbrdf-gpu/src/: bake.wgsl  lib.rs
crates/xbrdf-gui/: Cargo.toml
crates/xbrdf-gui/src/: main.rs
