[package]
name = "xbrdf-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "xbrdf-bake"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
exr.workspace = true
pollster.workspace = true
toml.workspace = true
xbrdf-core.workspace = true
xbrdf-gpu.workspace = true

[dev-dependencies]
tempfile.workspace = true
