[package]
name = "xbrdf-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
exr.workspace = true
glium.workspace = true
glutin.workspace = true
glutin-winit.workspace = true
imgui.workspace = true
imgui-glium-renderer.workspace = true
imgui-winit-support.workspace = true
pollster.workspace = true
raw-window-handle.workspace = true
toml.workspace = true
xbrdf-core.workspace = true
xbrdf-gpu.workspace = true
